workloads.yml
---
apiVersion: v1
kind: Service
metadata:
  name: grafana
  labels:
    app: grafana-app
    group: devops
  annotations:
spec:
  type: ClusterIP
  selector:
    app: grafana-app
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: grafana
  labels:
    app: grafana-app
    group: devops
spec:
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app: grafana-app
  serviceName: grafana
  replicas: 1
  template:
    metadata:
      labels:
        app: grafana-app
        group: devops
      annotations:
    spec:
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      containers:
        - name: grafana
          image: "grafana:11.3.0"
          imagePullPolicy: IfNotPresent
          resources:
            limits:
              cpu: 500m
              memory: 512Mi
            requests:
              cpu: 500m
              memory: 512Mi
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: grafana-storage
              mountPath: /var/lib/grafana
  volumeClaimTemplates:
  - metadata:
      name: grafana-storage
      annotations:
        volume.alpha.kubernetes.io/storage-class: local-path
    spec:
      accessModes:
      - ReadWriteOnce
      storageClassName: local-path
      resources:
        requests:
          storage: 12Gi
      volumeName: grafana-pv
#---
#apiVersion: v1
#kind: PersistentVolume
#metadata:
#  name: grafana-pv
#  annotations:
#spec:
#  accessModes:
#  - ReadWriteOnce
#  storageClassName: longhorn
#  capacity: 
#    storage: "15Gi"
#  volumeMode: "Filesystem"
#  persistentVolumeReclaimPolicy: "Delete"
#
